fix(progress-flow): prevent `z-index` overlapping problems by isolating the component
The progress-flow component will now have its own stacking content.
So if other elements in the DOM are absolutely positioned, they will
not be covered by elements of the progress-flow component which have
a z-index.

--- a/src/components/progress-flow/progress-flow-item/partial-styles/_selected-indicator.scss
+++ b/src/components/progress-flow/progress-flow-item/partial-styles/_selected-indicator.scss
@@ -2,7 +2,7 @@
     &:after {
         pointer-events: none;
         box-sizing: border-box;
-        z-index: z-index.$limel-progress-flow-step-content;
+        z-index: $limel-progress-flow-step-content;
         position: absolute;
         right: var(--selected-indicator-right);
 
