--- a/src/style/internal/z-index.scss
+++ b/src/style/internal/z-index.scss
@@ -14,6 +14,4 @@ $table--limel-table--row-selector: 1 !default;
 $popover-before: -1 !default;
 $button-group-radio-button-keyboard-focused: 1 !default;
 $list-mdc-list-item: 0 !default;
-$limel-progress-flow-step-content: 2 !default;
-$limel-progress-flow-divider: 1 !default;
 $limel-circular-progress-value: 1 !default;
